# pydb

./: .gitignore  LICENSE  README.md  setup.cfg
src/projects/pydb/: main.py
src/pydb/: .creds  commands.py  creds.py  exceptions.py  main.py  server.py
src/pydb/database/: db.py
tests/: test.py
