[metadata]
name = projects/pydb
version = 0.1.0
license = MIT
description = Fun python implementation for a database server
long_description = file: README.md
author = Cyclip
classifiers=
   Programming Language :: Python :: 3.9.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   

[options.packages.find]
where=src
